# evolimo

./: .gitignore  ARCHITECTURE.md  Fixed-Capacity Grid実装計画.md  GETTING_STARTED.md  PLAN.md  QUICKSTART.md  README.md  README_concepts.md  sim_output.evo
domain-model/: .gitignore  biome.json  package-lock.json  package.json  tsconfig.json
domain-model/_gen/: dynamics_ir.json  physics_ir.json  visual_mapping.json
domain-model/_gen/example_conditional/: dynamics_ir.json  visual_mapping.json
domain-model/_gen/example_fixed_capacity_grid/: dynamics_ir.json
domain-model/_gen/example_predation/: dynamics_ir.json  visual_mapping.json
domain-model/_gen/universal_gravitation/: dynamics_ir.json  visual_mapping.json
domain-model/_gen/universal_gravitation_fixed_capacity_grid/: dynamics_ir.json
domain-model/src/: _shared.ts  builder.ts  compiler.ts  definition.ts  types.ts
domain-model/src/definitions/: example_conditional.ts  example_fixed_capacity_grid.ts  example_predation.ts  universal_gravitation.ts  universal_gravitation_fixed_capacity_grid.ts
infrastructure/dev-cloud/: Cargo.toml  README.md  get-instance-id.sh  main.tf
infrastructure/dev-cloud/bootstrap/: main.tf
infrastructure/dev-cloud/src/: main.rs
simulator/: .gitignore  Cargo.toml  TODO.md  build.rs  rustfmt.toml
simulator/scripts/generators/: Cargo.toml  generate-phenotype-physics.rs
simulator/src/: grid.rs  lib.rs  lifecycle.rs  main.rs  recorder.rs
simulator/src/_gen/: .gitkeep  dynamics.rs  mod.rs  physics.rs
simulator/src/_gen/example_conditional/: dynamics.rs
simulator/src/_gen/example_fixed_capacity_grid/: dynamics.rs  phenotype.rs
simulator/src/_gen/example_predation/: dynamics.rs
simulator/src/_gen/universal_gravitation/: dynamics.rs
simulator/src/_gen/universal_gravitation_fixed_capacity_grid/: dynamics.rs  mod.rs
visualizer/: .gitkeep  Cargo.toml  README.md  evoReader.ts
visualizer/src/: evo.rs  main.rs  mapping.rs  renderer.rs  shader.wgsl
