[package]
name = "evolimo-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
