[package]
name = "evolimo-simulator"
version = "0.1.0"
edition = "2021"

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
