[package]
name = "evolimo-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colorous = "1"

winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
